--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
-    "express": "^4.18.2",
-    "mongoose": "^8.8.3"
+    "express": "^4.21.2",
+    "mongoose": "^8.9.3",
+    "nodemon": "^3.1.9"
   }
 }
